--- a/App/templates/admissions.html
+++ b/App/templates/admissions.html
@@ -158,7 +158,7 @@
         </div>
         
 
-        <a href="admissions" class="apply-btn">Apply Now</a>
+        <a href="fill_application/" class="apply-btn">Apply Now</a>
     </div>
 
     {% endblock %}
