--- a/App/templates/fee_payment.html
+++ b/App/templates/fee_payment.html
@@ -100,6 +100,6 @@
             <a href="https://www.paypal.com/in/webapps/mpp/paypal-me" class="payment-btn">Pay via PayPal</a>
         </div>
     </div>
-    <a href="{% url 'homepage' %}" class="btn-home">Back to Home</a>
+    <a href="{% url 'admissions' %}" class="btn-home">Back </a>
 </body>
 </html>
