--- a/App/templates/interview.html
+++ b/App/templates/interview.html
@@ -102,7 +102,7 @@
             <p><strong>Instructions:</strong> Be on time, dress formally, and be prepared to discuss your aspirations and academic strengths.</p>
         </div>
         
-        <a href="{% url 'admission_offer' %}" class="apply-btn">Proceed to Next Step</a>
+        <a href="{% url 'next_step' %}" class="apply-btn">Proceed to Next Step</a>
     </div>
     
     <a href="{% url 'homepage' %}" class="btn-home">Back to Home</a>
