--- a/App/templates/fill_application.html
+++ b/App/templates/fill_application.html
@@ -77,7 +77,9 @@
 <body>
     <div class="container">
         <h2>Fill Application Form</h2>
-        <form action="submit_application.php" method="post">
+        <form action="{% url 'submit_application' %}" method="post">
+            {% csrf_token %}
+            
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -106,7 +108,5 @@
             <button type="submit">Submit Application</button>
         </form>
     </div>
-
-    <a href="{% url 'homepage' %}" class="btn-home">Back to Home</a>
 </body>
 </html>
